syntax = "proto3";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

package chat;

option go_package="./pb";


service Chat {
    rpc GetMessages (google.protobuf.Empty) returns (stream Message);
    rpc PostMessage (Message) returns (Result);
}

message Message {
    string name = 1;
    string message = 2;
    google.protobuf.Timestamp createdAt = 3;
}

message Result {
    bool result = 1;
}